cmake_minimum_required (VERSION 3.10)

message("CMAKE_CURRENT_SOURCE_DIR : ${CMAKE_CURRENT_SOURCE_DIR}")
message("CMAKE_BINARY_DIR : ${CMAKE_BINARY_DIR}")
message("CMAKE_SOURCE_DIR : " ${CMAKE_SOURCE_DIR})
message("CMAKE_CURRENT_BINARY_DIR : ${CMAKE_CURRENT_BINARY_DIR}")

#add_subdirectory(GLFW)
#add_subdirectory(Vulkan)

#add_library(Graphics INTERFACE)

#target_link_libraries(Graphics INTERFACE GraphicsGLFW GraphicsVulkan Materials)
